# hybrid-search-eval

./: .gitignore  AGENTS.md  NOTES.md  README.md  generate_evals.py  generate_queries.py  pyproject.toml
_configs/: config.yaml
_core/: dashboard_template.html  utils.py
tests/: test_utils.py
