[project]
name = "hybrid-search-eval"
version = "0.1.0"
description = "A Hybrid Search Evaluation Tool"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "pyyaml>=6.0",
    "pyarrow>=21.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "ipykernel>=6.30.1",
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "requests>=2.31.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "einops>=0.8.1",
    "psutil>=5.9.0",
    "pip>=25.3",
    "datasets>=4.4.2",
    "ruff>=0.14.10",
    "pylate>=1.3.4",
    "httpx>=0.28.1",
    "sentence-transformers>=5.1.1",
    "weaviate-client>=4.19.2",
    "tiktoken>=0.12.0",
    "mteb>=2.6.7",
    "openai>=2.16.0",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "types-pyyaml>=6.0.12.20250915",
    "types-seaborn>=0.13.2.20250914",
]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff.lint]
ignore = ["E501"]
